# QML

./: README.md  Sekiro.cmake
Plugins/demo01/Sekiro/: Circle.qml  GlobalConfig.qml  Sekiro.pro  TMoveArea.qml  TResizeBorder.qml  plugin.qrc  sekiro.cpp  sekiro_plugin.cpp  sekiro_plugin.h
Plugins/demo01/build-Sekiro-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  qmldir
Plugins/demo01/build-Sekiro-Desktop_Qt_5_15_2_MSVC2019_64bit-Release/: Makefile  Makefile.Debug  Makefile.Release  plugin_qmlcache.qrc
Plugins/demo02/build-demo02-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
Plugins/demo02/build-demo02-Desktop_Qt_5_15_2_MSVC2019_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  Makefile.Debug  Makefile.Release  build.ninja  cmake_install.cmake  qml_qmlcache.qrc  qtcsettings.cmake
Plugins/demo02/demo02/: demo02.pro  main.qml
Plugins/demo03/build-demo03-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  demo03.ilk
Plugins/demo03/demo03/: CMakeLists.txt  main.qml
Sekiro/: qmldir
Sekiro/QML/: TTextBtn.qml
SekiroRelease/SekiroRelease/: CMakeLists.txt  SekRectangle.cpp  qmldir  sekiro.cpp
SekiroRelease/build-SekiroRelease-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  ExampleProject.exp  Sekiroplugin_SekiroPlugin.cpp  build.ninja  cmake_install.cmake  exampleproject_qmltyperegistrations.cpp  sekiro_qmltyperegistrations.cpp
SekiroRelease/build-SekiroRelease-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
SekiroRelease/build-SekiroRelease-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_ExampleProject.cmake  Qt6_QmlPlugins_Imports_ExampleProject.rsp
SekiroRelease/build-SekiroRelease-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/.rcc/: ExampleProject_raw_qml_0.qrc  Sekiro_raw_qml_0.qrc  qmake_ExampleProjectApp.qrc  qmake_Sekiro.qrc  qrc_ExampleProject_raw_qml_0.cpp  qrc_Sekiro_raw_qml_0.cpp  qrc_qmake_ExampleProjectApp.cpp  qrc_qmake_Sekiro.cpp
SekiroRelease/build-SekiroRelease-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/ExampleProjectApp/: ExampleProject_qml_module_dir_map.qrc
SekiroRelease/build-SekiroRelease-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/ExampleProject_autogen/: deps
SekiroRelease/build-SekiroRelease-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/Sekiro/: Sekiro_qml_module_dir_map.qrc  Sekiroplugin.lib  qmldir
SekiroRelease/build-SekiroRelease-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/Sekiro_autogen/: deps  mocs_compilation.cpp
SekiroRelease/build-SekiroRelease-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/Sekiro_qmlcache_autogen/: deps
SekiroRelease/build-SekiroRelease-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/Sekiro_resources_1_autogen/: deps
SekiroRelease/build-SekiroRelease-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/Sekiro_resources_2_autogen/: deps
SekiroRelease/build-SekiroRelease-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/Sekiroplugin_autogen/: deps
SekiroRelease/build-SekiroRelease-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/Sekiroplugin_init_autogen/: deps
SekiroRelease/build-SekiroRelease-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/meta_types/: Sekiro_json_file_list.txt  Sekiro_json_file_list.txt.timestamp  qt6sekiro_debug_metatypes.json.gen
SekiroRelease/build-SekiroRelease-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/qmltypes/: ExampleProject_foreign_types.txt
SekiroUI-test/Sekiro/: CMakeLists.txt  SekTheme.cpp  SekTheme.h  sekiro.h
SekiroUI-test/Sekiro/example/: example.cpp  example.qml
SekiroUI-test/build-Sekiro-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  ExampleProject.exp  ExampleProject.ilk  ExampleProject.lib  Sekiro.lib  Sekirod.exp  Sekirod.ilk  Sekirod.lib  Sekiroplugin_init.cpp  build.ninja  cmake_install.cmake
SekiroUI-test/build-Sekiro-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_ExampleProject.cmake  (+1 more)
SekiroUI-test2/Sekiro/: CMakeLists.txt  Def.h  SekColorSet.cpp  SekColors.h  main.cpp
SekiroUI-test2/build-Sekiro-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  sekiro_qmltyperegistrations.cpp
SekiroUI/Sekiro/: CMakeLists.txt  SekApp.cpp  SekApp.h  SekColorSet.h  SekColors.cpp  SekColors.h  SekFramelessHelper.cpp  SekFramelessHelper.h  SekRectangle.h  SekRegister.cpp  SekRegister.h  SekTextStyle.cpp  SekTextStyle.h  SekTheme.h  SekTools.cpp  SekTools.h  SekTreeModel.cpp  SekTreeModel.h  SekViewModel.cpp  SekViewModel.h  Sekiro.qrc  sekrio.cpp  sekrio.h
SekiroUI/Sekiro/QML/: SekCheckBox.qml  SekFilledButton.qml  SekIcon.qml  SekImageButton.qml  SekPagination.qml  SekSpinBox.qml  SekTableView.qml  SekTreeView.qml
SekiroUI/SekiroUI/: CMakeLists.txt  main.cpp
SekiroUI/SekiroUI/Example/: CMakeLists.txt  main.cpp  main.qml
SekiroUI/SekiroUI/Sekiro/: CMakeLists.txt  SekColorSet.h  SekRectangle.h  SekTextStyle.h  SekTools.h  SekViewModel.h
SekiroUI/SekiroUI/Sekiro/Qt6/: SekClip.qml
SekiroUI/build-Sekiro-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  sekiro_qmltyperegistrations.cpp
SekiroUI/build-SekiroUI-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
SekiroUI/build-SekiroUI-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Sekiro_Plugin/Sekiro/: Sekiro.pro  main.qml  qml.qrc
Sekiro_Plugin/build-Sekiro-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
TaoQuick/Sekiro/: qmldir
demo01/build-demo01-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  demo01.ilk
demo01/build-demo01-Desktop_Qt_5_15_2_MSVC2019_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
demo01/demo01/: CMakeLists.txt  main.cpp  main.qml
(+689 files in other folders)
